# rustboy

./: .gitignore  Cargo.toml  package-lock.json  package.json  webpack.config.js
docs/: cgb.asm  dependencies.plantuml  notes.md  startup.md
frontend/: package-lock.json  package.json  tsconfig.json  webpack.config.js  webpack.config.prod.js
frontend/src/: app.scss  app.tsx  index.html  index.tsx  rustboy.d.ts  rustboy.js  rustboy_bg.js  rustboy_bg.wasm  rustboy_bg.wasm.d.ts
frontend/src/styles/: colors.scss
js/: index.tsx
js/components/app/: app.scss  app.tsx
js/components/button-bar/: button-bar.scss  button-bar.tsx
js/components/control-panel/: control-panel.tsx
js/components/gameboy/: gameboy.tsx
js/components/object-atlas/: object-atlas.scss  object-atlas.tsx
js/components/tab-pane/: tab-pane.scss  tab-pane.tsx
js/components/tile-atlas/: tile-atlas.scss  tile-atlas.tsx
js/styles/: colors.scss  dimensions.scss
src/: lib.rs  main.rs
src/audio/: audio_driver.rs  custom_wave_player.rs  gain_controller.rs  length_timer.rs  mod.rs  noise_player.rs  pulse_player.rs  web_audio_driver.rs
src/context/: context.rs
src/controllers/: audio.rs  buttons.rs  dma.rs  lcd.rs  mod.rs  speed.rs  timer.rs
src/cpu/: alu.rs  cpu.rs  decoder.rs  instruction.rs  interrupts.rs  mod.rs  opcode.rs  register.rs
src/emulator/: compatibility_palette.rs  emulator.rs  mod.rs  web_emulator.rs
src/features/: dma.rs  lcd.rs  mod.rs  oam.rs  palette.rs  timer.rs
src/infrastructure/: mod.rs  toggle.rs
src/infrastructure/time/: clock.rs
src/memory/: bank_memory.rs  bus.rs  control.rs  cram.rs  dma.rs  dma_bus.rs  linear_memory.rs  main.rs  main_memory.rs  mbc.rs  mbc0.rs  mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  memory.rs  memory_bus.rs  mod.rs  oam.rs  stack.rs  unmapped.rs  vram.rs  wram.rs
src/renderer/: canvas_renderer.rs  mod.rs  renderer.rs
src/time/: duration.rs  mod.rs  time.rs
src/util/: bit_util.rs  instruction_label_provider.rs  iterator.rs  mod.rs  request_flag.rs  serialization.rs
static/: index.html  pwm-processor.js  waveform-processor.js  white-noise-processor.js
(+2 files in other folders)
