[package]
name = "rustboy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
byteorder = "1.4.3"
wasm-bindgen = "0.2.80"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
js-sys = "0.3.57"

[dependencies.web-sys]
version = "0.3.57"
features = ["console", "Performance", "Window"]

[dev-dependencies]
assert_hex = "0.2.2"
test-case = "1.2.1"

[profile.release]
opt-level = "s"
