[package]
name = "rustboy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
byteorder = "1.4.3"
wasm-bindgen = "0.2.80"
console_error_panic_hook = { version = "0.1.7" }
js-sys = "0.3.57"
num = "0.4.0"
closure = "0.3.0"
mockall = "0.11.3"
wee_alloc = { version = "0.4.5", optional = true }
wasm-bindgen-futures = "0.4.34"

[dependencies.itertools]
version = "0.10.5"
features = ["use_alloc"]

[dependencies.web-sys]
version = "0.3.57"
features = ["AnalyserNode", "console", "Worklet", "Performance", "Document", "Element", "HtmlCanvasElement", "CanvasRenderingContext2d", "ImageData", "Window", "AudioContext", "AudioParam", "AudioParamMap", "AudioWorklet", "AudioWorkletNode", "OscillatorNode", "BiquadFilterNode", "BiquadFilterType", "AudioDestinationNode", "AudioBuffer", "AudioBufferSourceNode", "GainNode", "MessagePort"]

[dev-dependencies]
assert_hex = "0.2.2"
test-case = "1.2.1"

[profile.release]
opt-level = "s"
